Add links to enhance the About Me section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <section id="about" class="section">
       <h2 class="section-title">About Me</h2>
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">
-        I come with a decade's experience of innovating and building at the crossroads of product, engineering, and data (leading ambitious roadmaps, and untangling unstructured territoires within fast-paced scale-ups).
+        I come with a decade's experience of innovating and building at the crossroads of product, engineering, and data <a style="color: var(--grey-label) !important;">(leading ambitious roadmaps, and untangling unstructured territoires within fast-paced scale-ups)</a>.
         <br><br>
         What drives me?       
       </p>
@@ -110,11 +110,11 @@
       </h3>
       
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
-        My career so far has been a blend of managing innovative technology products and leading complex technical programs. And lately, my work has revolved around building developer-focused products (<a style="color: var(--grey-label) !important;">Developer Experience, Infrastructure, Platform Capabilities</a>) and data platforms (Data Science, Engineering, Analytics).
+        My career so far has been a blend of managing innovative technology products and leading complex technical programs. And lately, my work has revolved around building developer-focused products <a style="color: var(--grey-label) !important;">(Developer Experience, Infrastructure, Platform Capabilities)</a> and data platforms <a style="color: var(--grey-label) !important;">(Data Science, Engineering, Analytics)</a>.
         <br><br>
-        Along the way, I’ve collaborated closely with Platform/Data Engineering, System Architects, and DevOps teams. And these are the spaces I’m the happiest, contributing to "How Engineers build, and use Technical Products". Further, I love to tinker with hands-on experiments (<a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">on Github</a>), keeping me alive in the open source community.
+        Along the way, I’ve collaborated closely with Platform/Data Engineering, System Architects, and DevOps teams. And these are the spaces I’m the happiest, contributing to "How Engineers build, and use Technical Products". Further, I love to tinker with hands-on experiments <a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">(on Github)</a>, keeping me alive in the open source community.
         <br><br>
-        Somewhere between all of that, I also developed a soft spot for technical storytelling. Sharing my own experiences and learnings (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) through blogs on the latest technological advancements and technical how-to guides (breaking down complex system architecture, and explaining tricky concepts in a way that lands). 
+        Somewhere between all of that, I also developed a soft spot for technical storytelling. Sharing my own experiences and learnings <a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">(on Medium)</a> through blogs on the latest technological advancements and technical how-to guides (breaking down complex system architecture, and explaining tricky concepts in a way that lands). 
         <br><br>
         Outside of work, I love to keep myself active and fit. In fact, since my school days, I have been an athlete, won many medals, participated in marathons, and even represented my state twice at national-level tournament.
         <br><br>
