--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     <section id="about" class="section">
       <h2 class="section-title">About Me</h2>
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">
-        I come with a decade's experience of innovating and building at the crossroads of product, engineering, and data <a style="font-style: italic;">(deliverying ambitious roadmaps, and untangling unstructured territoires within fast-paced scale-ups)</a>.
+        I come with a decades' experience of innovating and building at the crossroads of product, engineering, and data <a style="font-style: italic;">(delivering ambitious roadmaps, and untangling unstructured territoires within fast-paced scale-ups)</a>.
         <br><br>
-        What drives me?       
+        What Drives Me?       
       </p>
       
       <h3 style="font-size: 20px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.3;">
@@ -112,13 +112,13 @@
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
         My career so far has been a blend of managing innovative technology products and leading complex technical programs. And lately, my work has revolved around building developer-focused products <a style="font-style: italic;">(Developer Experience, Infrastructure, Platform Capabilities)</a> and data platforms <a style="font-style: italic;">(Data Science, Engineering, Analytics)</a>.
         <br><br>
-        Along the way, I’ve collaborated closely with Platform/Data Engineering, System Architects, and DevOps teams. And these are the spaces I’m the happiest, contributing to "How Engineers build, and use Technical Products". Further, I love to tinker with hands-on experiments <a style="font-style: italic;"> ( <a href="https://github.com/PrineetKaur" target="_blank">on Github</a> ) </a>, keeping me alive in the open source community.
+        Along the way, I’ve collaborated closely with Platform/Data Engineering, System Architects, and DevOps teams. And these are the spaces I’m the happiest, contributing to "How Engineers build, and use Technical Products". Further, I love to tinker with hands-on experiments   (<a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">on Github</a>) keeping me alive in the open source community.
         <br><br>
         Somewhere between all of that, I also developed a soft spot for technical storytelling. Sharing my own experiences and learnings (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) through blogs on the latest technological advancements and technical writeups <a style="font-style: italic;">(e.g. how-to guides for developer onboarding or breaking down complex concepts in a way that lands)</a>. 
         <br><br>
-        Outside of work, I love to keep myself active and fit. In fact, since my school days, I have been an athlete, won many medals, participated in marathons, and even represented my state twice at national-level tournament.
+        Outside of work, I love to keep myself active and fit. <a style="font-style: italic;">(Since my school days, I have been an athlete, won many medals, participated in marathons, and even represented my state twice at national-level tournament)</a>.
         <br><br>
-        My philosophy is simple:
+        My Philosophy is Simple:
       </p>
 
       <h3 style="font-size: 20px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.3;">
