Refactor text in About Me section for consistency
Updated text for improved capitalization and clarity.

--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
     <section id="about" class="section">
       <h2 class="section-title">About Me</h2>
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">
-        I come with a decades' experience of innovating and building at the crossroads of product, engineering, and data <a style="font-style: italic;">(delivering ambitious roadmaps, and untangling unstructured territoires within fast-paced scale-ups)</a>.
+        I come with a decades' experience of Innovating and Building at the crossroads of Product, Engineering, and Data <a style="font-style: italic;">(delivering ambitious roadmaps, and untangling unstructured territoires within fast-paced scale-ups)</a>.
         <br><br>
         What Drives Me?       
       </p>
       
       <h3 style="font-size: 20px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.3;">
-        “Turning technical chaos into clear, scalable products”, and “Helping teams ship things they’re genuinely proud of.”
+        “Turning Technical Chaos into Clear, Scalable Products that Users Actually USE”, and “Helping teams meet Deadlines and Ship stuff they’re Genuinely PROUD of.”
       </h3>
       
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
-        My career so far has been a blend of managing innovative technology products and leading complex technical programs. And lately, my work has revolved around building developer-focused products <a style="font-style: italic;">(Developer Experience, Infrastructure, Platform Capabilities)</a> and data platforms <a style="font-style: italic;">(Data Science, Engineering, Analytics)</a>.
+        My career so far has been a blend of managing Technology Products and leading Complex Technical Programs. And lately, my work has revolved around building Developer-Focused Products <a style="font-style: italic;">(developer experience, infrastructure, platform capabilities)</a> and data platforms <a style="font-style: italic;">(data science, engineering, analytics)</a>.
         <br><br>
-        Along the way, I’ve collaborated closely with Platform/Data Engineering, System Architects, and DevOps teams. And these are the spaces I’m the happiest, contributing to "How Engineers build, and use Technical Products". Further, I love to tinker with hands-on experiments   (<a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">on Github</a>) keeping me alive in the open source community.
+        Along the way, I’ve collaborated closely with DevOps, System Architects, and Platform/Data Engineering teams. Kind of workspaces that keep me happiest, allowing me to contribute to <a style="font-style: italic;">"How Engineers build, and use Technical Products"</a>. Further, I love to tinker with hands-on experiments (<a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">on Github</a>), and even fulfill my passion to contribute to the open source community.
         <br><br>
         Somewhere between all of that, I also developed a soft spot for technical storytelling. Sharing my own experiences and learnings (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) through blogs on the latest technological advancements and technical writeups <a style="font-style: italic;">(e.g. how-to guides for developer onboarding or breaking down complex concepts in a way that lands)</a>. 
         <br><br>
