--- a/index.html
+++ b/index.html
@@ -116,14 +116,18 @@
         <br><br>
         Somewhere between all of that, I also developed a soft spot for Technical Storytelling. Sharing my own Experiences and Learnings (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) through Blogs on the Latest Technological Advancements and Technical Writeups <a style="font-style: italic;">(e.g. how-to guides for developer onboarding or breaking down complex concepts in a way that lands)</a>. 
         <br><br>
-        Outside of work, I love to keep myself Active and Fit. <a style="font-style: italic;">(Since my school days, I have been an athlete, won many medals, participated in marathons, and even represented my state twice at national-level tournament)</a>.
-        <br><br>
         My Philosophy is Simple:
       </p>
 
       <h3 style="font-size: 20px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.3;">
        Build smart, Deliver well, Stay curious, and Make Technology Understandable.
       </h3>
+      
+      <br><br>
+       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;"> 
+        Outside of work, I love to keep myself Active and Fit. <a style="font-style: italic;">(Since my school days, I have been an athlete, won many medals, participated in marathons, and even represented my state twice at national-level tournament)</a>.
+      </p>
+      
     </section>    
 
     <!-- TECH BLOGS -->
