--- a/index.html
+++ b/index.html
@@ -123,9 +123,8 @@
        Build smart, Deliver well, Stay curious, and Make Technology Understandable.
       </h3>
       
-      <br><br>
        <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;"> 
-        Outside of work, I love to keep myself Active and Fit. <a style="font-style: italic;">(Since my school days, I have been an athlete, won many medals, participated in marathons, and even represented my state twice at national-level tournament)</a>.
+        Also, outside of work, I love to keep myself Active and Fit. <a style="font-style: italic;">(Since my school days, I have been an active athlete, won many medals, participated in marathons, and even represented my state twice at national-level tournament)</a>.
       </p>
       
     </section>    
