--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </p>
       
       <h3 style="font-size: 20px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.3;">
-        “Turning technical chaos into clear, scalable products that users actually Use”, and “Helping teams meet deadlines and ship stuff they’re genuinely Proud of.”
+        “Turning technical chaos into clear, scalable products that users actually use”, and “Helping teams meet deadlines and ship stuff they’re genuinely proud of.”
       </h3>
       
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
