--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">
         I come with a decades' experience of Innovating and Building at the crossroads of Product, Engineering, and Data <a style="font-style: italic;">(delivering ambitious roadmaps, and untangling unstructured territoires within fast-paced scale-ups)</a>.
         <br><br>
-        What Drives Me?       
+        WHAT DRIVES ME?       
       </p>
       
       <h3 style="font-size: 19px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.4;">
@@ -116,7 +116,7 @@
         <br><br>
         Somewhere between all of that, I also developed a soft spot for Technical Storytelling. Sharing my own Experiences and Learnings (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) through Blogs on the Latest Technological Advancements and Technical Writeups <a style="font-style: italic;">(e.g. how-to guides for developer onboarding or breaking down complex concepts in a way that lands)</a>. 
         <br><br>
-        My Philosophy is Simple:
+        MY PHILOSOPHY:
       </p>
 
       <h3 style="font-size: 19px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.4;">
