--- a/index.html
+++ b/index.html
@@ -201,6 +201,15 @@
 
         <div class="writingcard">
           <h3>
+            <a href="https://github.com/PrineetKaur/Developer-Technical-Documentation-Portal" target="_blank">
+            Developer Technical Documentation Portal
+            </a>
+          </h3>
+          <p>Demo built using a Docs-as-Code approach to showcase Tech Doc Best Practices</p>
+       </div>
+      
+        <div class="writingcard">
+          <h3>
             <a href="https://github.com/PrineetKaur/AI-Pipeline-for-Technical-Documentation" target="_blank">
             AI Pipeline for Technical Documentation
             </a>
@@ -210,21 +219,12 @@
 
         <div class="writingcard">
           <h3>
-            <a href="https://github.com/PrineetKaur/From-Automation-to-Agentic-AI" target="_blank">
-            From “Automation” to "GenAI" to "Agentic AI"
+            <a href="https://github.com/PrineetKaur/My-DITA-Playground" target="_blank">
+            Getting my Hands On DITA
             </a>
           </h3>
-          <p>A white paper, with a complete technical deep-dive into the evolution of Agentic AI</p>
+          <p>Hands-on technical writing workflows to explore topic types, maps, and content reuse.</p>
         </div>
-
-        <div class="writingcard">
-          <h3>
-            <a href="https://github.com/PrineetKaur/Developer-Technical-Documentation-Portal" target="_blank">
-            Developer Technical Documentation Portal
-            </a>
-          </h3>
-          <p>Demo built using a Docs-as-Code approach to showcase Tech Doc Best Practices</p>
-       </div>
 
         <div class="writingcard">
           <h3>
@@ -273,12 +273,12 @@
 
         <div class="writingcard">
           <h3>
-            <a href="https://www.linkedin.com/pulse/data-science-netflix-more-than-just-recommendation-system-kaur/?trackingId=Cfj4JDjvQK%2BBWZP6IuhUHw%3D%3D" target="_blank">
-            How Netflix nails Data Science
+            <a href="https://github.com/PrineetKaur/From-Automation-to-Agentic-AI" target="_blank">
+            From “Automation” to "GenAI" to "Agentic AI"
             </a>
           </h3>
-          <p>Technical deep dive into their core recommendation system and use of data analytics</p>
-       </div>
+          <p>A white paper, with a complete technical deep-dive into the evolution of Agentic AI</p>
+        </div>
 
       </div>
     </section>
