--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
         </div>
 
         <div class="blogcard">
-          <a href="https://medium.com/stackademic/the-architectural-swing-of-hype-and-buzz-a10c4dc02e7e">
-          <img src="assets/img/blog7.webp" alt="Blog 7">
+          <a href="https://medium.com/design-bootcamp/mcp-and-the-quiet-rewiring-of-how-we-build-ai-powered-products-d734b9b97f1a">
+          <img src="assets/img/blog7.png" alt="Blog 7">
           </a>
         </div>
 
@@ -184,7 +184,7 @@
         </div>
 
         <div class="blogcard">
-          <a href="https://medium.com/stackademic/human-centric-api-design-in-the-world-where-ai-writes-the-code-19e9b04db56c">
+          <a href="https://medium.com/stackademic/the-architectural-swing-of-hype-and-buzz-a10c4dc02e7e">
           <img src="assets/img/blog9.webp" alt="Blog 9">
           </a>
         </div>
