--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
         My career so far has been a blend of managing Technology Products and leading Complex Technical Programs. And lately, my work has revolved around building Developer-Focused Products <a style="font-style: italic;">(developer experience, infrastructure, platform capabilities)</a> and data platforms <a style="font-style: italic;">(data science, engineering, analytics)</a>.
         <br><br>
-        Along the way, I’ve collaborated closely with DevOps, System Architects, and Platform/Data Engineering teams. Kind of workspaces that keep me Happiest, leading <a style="font-style: italic;">"How Engineers build, and use Technical Products"</a>. Further, I love to tinker with Hands-on Experiments (<a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">on Github</a>), and thereby contribute to the Open Source Community.
+        Along the way, I’ve collaborated closely with DevOps, System Architects, and Platform/Data Engineering teams. And these are the kind of workspaces that keep me the Happiest, closely contributing to <a style="font-style: italic;">"How Engineers build, and use Technical Products"</a>. Further, I love to tinker with Hands-on Experiments (<a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">on Github</a>), and thereby contribute to the Open Source Community.
         <br><br>
-        Somewhere between all of that, I also developed a soft spot for Technical Storytelling. Sharing my own Experiences and Learnings (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) through Blogs on the Latest Technological Advancements and Technical Writeups <a style="font-style: italic;">(e.g. how-to guides for developer onboarding or breaking down complex concepts in a way that lands)</a>. 
+        Somewhere between all of that, I also developed a soft spot for Technical Storytelling. Sharing my thoughts (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) through Blogs on the Latest Tech Advancements and Technical Writeups <a style="font-style: italic;">(e.g. how-to guides for developer onboarding or breaking down complex concepts in a way that lands)</a>. 
         <br><br>
         MY PHILOSOPHY:
       </p>
@@ -124,7 +124,7 @@
       </h3>
       
        <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;"> 
-        Also, outside of work, I love to keep myself Active and Fit. <a style="font-style: italic;">(Since my school days, I have been an active athlete, won many medals, participated in marathons, and even represented my state twice at national-level tournament)</a>.
+        Outside of work, I love to keep myself Active and Fit. <a style="font-style: italic;">(Since school days, I have been an active athlete, won many medals, participated in marathons, and represented my state twice at national-level tournament)</a>.
       </p>
       
     </section>    
