Update project descriptions and image file extension

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
         <div class="projectcard">
           <a href="https://github.com/PrineetKaur/Customer-Targeting-using-Web-Journey-Analytics-ML-Model-for-Monabanq-">
-          <img src="assets/img/project8.png" alt="Project 8">
+          <img src="assets/img/project8.jpg" alt="Project 8">
           </a>
         </div>
 
@@ -361,7 +361,7 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project1.png" alt="Sentiment Analytics using Twitter Data">
           <div class="project-overlay">
-            <h3>Sentiment Analytics (Twitter)</h3>
+            <h3>Sentiment Analytics using Twitter API (R, Shiny, Markdown)</h3>
           </div>
         </div>
       </a>
@@ -372,7 +372,7 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project2.png" alt="Spark Databricks Project">
           <div class="project-overlay">
-            <h3>Spark & Databricks Analytics</h3>
+            <h3>Project of streaming pipelines and DeepLearing (SQL, PySpark/Databricks)</h3>
           </div>
         </div>
       </a>
@@ -383,7 +383,7 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project3.png" alt="Target Donor Prediction">
           <div class="project-overlay">
-            <h3>Target Donor Prediction</h3>
+            <h3>ML Modelling for Predictive Analysis (Python)</h3>
           </div>
         </div>
       </a>
@@ -394,7 +394,7 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project4.png" alt="Social Network Analysis">
           <div class="project-overlay">
-            <h3>Social Network Analysis</h3>
+            <h3>Social Network Analysis for Game of Thrones (R)</h3>
           </div>
         </div>
       </a>
@@ -405,7 +405,7 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project5.png" alt="Pricing Analytics">
           <div class="project-overlay">
-            <h3>Pricing Analytics (Web Scraping)</h3>
+            <h3>Pricing Analytics using Web Scraping (Python)</h3>
           </div>
         </div>
       </a>
@@ -416,7 +416,7 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project6.png" alt="Music Recommendation System">
           <div class="project-overlay">
-            <h3>Music Recommendation System</h3>
+            <h3>ML Music Recommendation System (Python)</h3>
           </div>
         </div>
       </a>
@@ -427,7 +427,7 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project7.png" alt="Customer Behaviour Analysis">
           <div class="project-overlay">
-            <h3>Customer Behaviour Analysis</h3>
+            <h3>Consumer Gambling Behaviour Analysis (R, Shiny)</h3>
           </div>
         </div>
       </a>
@@ -438,7 +438,7 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project8.png" alt="Customer Targeting ML">
           <div class="project-overlay">
-            <h3>Customer Targeting (ML)</h3>
+            <h3>ML modelling for Web Journey Analytics (Python, Power BI)</h3>
           </div>
         </div>
       </a>
@@ -449,7 +449,7 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project9.png" alt="Yelp Big Data Project">
           <div class="project-overlay">
-            <h3>Yelp Purchase Prediction</h3>
+            <h3>Customer Purchase Prediction ML Model (PySpark)</h3>
           </div>
         </div>
       </a>
