Update project image sources in index.html

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
         <div class="projectcard">
           <a href="https://github.com/PrineetKaur/Customer-Targeting-using-Web-Journey-Analytics-ML-Model-for-Monabanq-">
-          <img src="assets/img/project8.jpg" alt="Project 8">
+          <img src="assets/img/project8.png" alt="Project 8">
           </a>
         </div>
 
@@ -372,7 +372,7 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project2.png" alt="Spark Databricks Project">
           <div class="project-overlay">
-            <h3>Project of streaming pipelines and DeepLearing (SQL, PySpark/Databricks)</h3>
+            <h3>Project of streaming pipelines and Deep Learning (SQL, PySpark/Databricks)</h3>
           </div>
         </div>
       </a>
@@ -436,7 +436,7 @@
     <div class="projectcard">
       <a href="https://github.com/PrineetKaur/Customer-Targeting-using-Web-Journey-Analytics-ML-Model-for-Monabanq-" class="project-link">
         <div class="project-image-wrapper">
-          <img src="assets/img/project8.png" alt="Customer Targeting ML">
+          <img src="assets/img/project8.jpg" alt="Customer Targeting ML">
           <div class="project-overlay">
             <h3>ML modelling for Web Journey Analytics (Python, Power BI)</h3>
           </div>
