Update project descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project2.png" alt="Spark Databricks Project">
           <div class="project-overlay">
-            <h3>Project of streaming pipelines and Deep Learning (SQL, PySpark/Databricks)</h3>
+            <h3>ML pipelines and Deep Learning (SQL, PySpark/Databricks)</h3>
           </div>
         </div>
       </a>
@@ -405,7 +405,7 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project5.png" alt="Pricing Analytics">
           <div class="project-overlay">
-            <h3>Pricing Analytics using Web Scraping (Python)</h3>
+            <h3>Pricing Analytics using Web Scraping Data (Python)</h3>
           </div>
         </div>
       </a>
