Modify blog cards with new links and images
Updated blog links and images in the blog section.

--- a/index.html
+++ b/index.html
@@ -167,7 +167,13 @@
 
         <div class="blogcard">
           <a href="https://medium.com/design-bootcamp/mcp-and-the-quiet-rewiring-of-how-we-build-ai-powered-products-d734b9b97f1a">
-          <img src="assets/img/blog7.png" alt="Blog 7">
+          <img src="assets/img/blog6.png" alt="Blog 6">
+          </a>
+        </div>
+
+        <div class="blogcard">
+          <a href="https://medium.com/agileinsider/agile-was-never-the-problem-how-we-misinterpreted-the-principles-was-7de3459c1441">
+          <img src="assets/img/blog7.webp" alt="Blog 7">
           </a>
         </div>
 
@@ -178,14 +184,8 @@
         </div>
 
         <div class="blogcard">
-          <a href="https://medium.com/stackademic/the-architectural-swing-of-hype-and-buzz-a10c4dc02e7e">
+          <a href="https://medium.com/activated-thinker/from-devrel-to-devops-to-devex-building-efficient-feedback-engines-for-dev-focused-platforms-23ae59f12f92">
           <img src="assets/img/blog9.webp" alt="Blog 9">
-          </a>
-        </div>
-
-        <div class="blogcard">
-          <a href="https://medium.com/towards-artificial-intelligence/embracing-the-vibe-in-vibe-coding-how-to-work-faster-without-losing-control-f64ede270299">
-          <img src="assets/img/blog6.png" alt="Blog 6">
           </a>
         </div>
         
