Update blog titles and add subtitles in index.html

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog2.webp" alt="From Workflows to Smart Minds">
           <div class="blog-overlay">
-            <h3>From Workflows to Smart Minds</h3>
+            <h3>From Automated Workflows to Smart Minds</h3>
+            <h4>(Generative AI, AI Agents & Agentic Systems)</h4>
           </div>
         </div>
       </a>
@@ -164,6 +165,7 @@
           <img src="assets/img/blog3.webp" alt="Why AI Systems Fail">
           <div class="blog-overlay">
             <h3>Why Most AI Systems Fail</h3>
+            <h4>(LLMs, & Context Engineering)</h4>
           </div>
         </div>
       </a>
