--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog3.webp" alt="Why AI Systems Fail">
           <div class="blog-overlay">
-            <h3>Why Most AI Systems Fail</h3>
-            <h4>(LLMs, & Context Engineering)</h4>
+            <h3>Why Even Great AI Systems Fail Badly</h3>
+            <h4>(Large Language Models, & Context Engineering)</h4>
           </div>
         </div>
       </a>
@@ -176,7 +176,8 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog4.webp" alt="AI Agents are Full Stack">
           <div class="blog-overlay">
-            <h3>AI Agents Are a Full-Stack Problem</h3>
+            <h3>Why AI Agents Are a Full-Stack Problem</h3>
+             <h4>(Artificial Intelligence & System Thinking)</h4>
           </div>
         </div>
       </a>
@@ -187,7 +188,8 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog5.webp" alt="Engineering Teams Build IDPs">
           <div class="blog-overlay">
-            <h3>Every Team Builds an IDP</h3>
+            <h3>Every Engineering Team Builds an IDP</h3>
+            <h4>(Platform Engineering & Developer Efficiency)</h4>
           </div>
         </div>
       </a>
@@ -199,6 +201,7 @@
           <img src="assets/img/blog6.png" alt="MCP and AI Products">
           <div class="blog-overlay">
             <h3>MCP and AI-Powered Products</h3>
+            <h4>(AI Engineering & MCP Servers)</h4>
           </div>
         </div>
       </a>
@@ -210,6 +213,7 @@
           <img src="assets/img/blog7.webp" alt="Agile Was Never the Problem">
           <div class="blog-overlay">
             <h3>AI is revealing our Broken Agile Habits</h3>
+            <h4>(Agile Methodology & Future of Work)</h4>
           </div>
         </div>
       </a>
@@ -221,6 +225,7 @@
           <img src="assets/img/blog8.webp" alt="Death of Static Docs">
           <div class="blog-overlay">
             <h3>The Death of Static Dev Documentation</h3>
+            <h4>(Developer Experience & Techincal Writing)</h4>
           </div>
         </div>
       </a>
@@ -232,6 +237,7 @@
           <img src="assets/img/blog9.webp" alt="Automation to Dehumanization">
           <div class="blog-overlay">
             <h3>From AI Automation to Dehumanization</h3>
+            <h4>(Sustainable & Responsible AI)</h4>
           </div>
         </div>
       </a>
@@ -343,7 +349,8 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project1.png" alt="Sentiment Analytics using Twitter Data">
           <div class="project-overlay">
-            <h3>Sentiment Analytics using Twitter API (R, Shiny, Markdown)</h3>
+            <h3>Sentiment Analytics using Twitter API</h3>
+            <h4>(R, Shiny & Markdown)</h4>
           </div>
         </div>
       </a>
@@ -354,7 +361,8 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project2.png" alt="Spark Databricks Project">
           <div class="project-overlay">
-            <h3>ML pipelines and Deep Learning (SQL, PySpark/Databricks)</h3>
+            <h3>ML pipelines and Deep Learning</h3>
+            <h4>(SQL, PySpark & Databricks)</h4>
           </div>
         </div>
       </a>
@@ -365,7 +373,8 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project3.png" alt="Customer Behaviour Analysis">
           <div class="project-overlay">
-            <h3>Consumer Gambling Behaviour Analysis (R, Shiny)</h3>
+            <h3>Consumer Gambling Behaviour Analysis</h3>
+            <h4>(R & Shiny)</h4>
           </div>
         </div>
       </a>
@@ -376,7 +385,8 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project4.png" alt="Social Network Analysis">
           <div class="project-overlay">
-            <h3>Social Network Analysis for Game of Thrones (R)</h3>
+            <h3>Social Network Analysis: "Game of Thrones"</h3>
+            <h4>(R & Centrality Measures)</h4>
           </div>
         </div>
       </a>
@@ -387,7 +397,8 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project5.jpg" alt="Customer Targeting ML">
           <div class="project-overlay">
-            <h3>ML modelling for Web Journey Analytics (Python, Power BI)</h3>
+            <h3>ML model for Web Journey Analytics</h3>
+            <h4>(Python & Power BI)</h4>
           </div>
         </div>
       </a>
@@ -398,7 +409,8 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project6.png" alt="Music Recommendation System">
           <div class="project-overlay">
-            <h3>ML Music Recommendation System (Python)</h3>
+            <h3>ML Music Recommendation System</h3>
+            <h4>(Python & Tabeleau)</h4>
           </div>
         </div>
       </a>
@@ -409,7 +421,8 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project7.png" alt="Target Donor Prediction">
           <div class="project-overlay">
-            <h3>ML Modelling for Predictive Analysis (Python)</h3>
+            <h3>Predicting Donation Probability</h3>
+            <h4>(Python)</h4>
           </div>
         </div>
       </a>
@@ -420,7 +433,8 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project8.png" alt="Pricing Analytics">
           <div class="project-overlay">
-            <h3>Pricing Analytics using Web Scraping Data (Python)</h3>
+            <h3>Pricing Analytics using Web Scraping Data</h3>
+            <h4>(Python)</h4>
           </div>
         </div>
       </a>
@@ -431,7 +445,8 @@
         <div class="project-image-wrapper">
           <img src="assets/img/project9.png" alt="Yelp Big Data Project">
           <div class="project-overlay">
-            <h3>Customer Purchase Prediction ML Model (PySpark)</h3>
+            <h3>Customer Purchase Prediction ML Model</h3>
+            <h4>(PySpark)</h4>
           </div>
         </div>
       </a>
