--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="heading quote">
       <h3>
-      “I make it easier to Build, Ship, Understand, and Adopt Technical Products”
+      “I make it easier to Build, Ship, Understand, and Adopt Technical Products.”
       </h3>  
     </div>
 
@@ -141,7 +141,7 @@
           <img src="assets/img/blog1.webp" alt="Smarter Tools, Dumber Mistakes">
           <div class="blog-overlay">
             <h3>Smarter Tools, Dumber Mistakes</h3>
-            <h4>(Artificial Intelligence & Developer Productivity)</h4>
+            <h4>(AI Tools & Dev Productivity)</h4>
           </div>
         </div>
       </a>
@@ -153,7 +153,7 @@
           <img src="assets/img/blog2.webp" alt="From Workflows to Smart Minds">
           <div class="blog-overlay">
             <h3>From Automated Workflows to Smart Minds</h3>
-            <h4>(Generative AI, AI Agents & Agentic Systems)</h4>
+            <h4>(Generative AI & Agentic Systems)</h4>
           </div>
         </div>
       </a>
@@ -165,7 +165,7 @@
           <img src="assets/img/blog3.webp" alt="Why AI Systems Fail">
           <div class="blog-overlay">
             <h3>Why Even Great AI Systems Fail Badly</h3>
-            <h4>(Large Language Models, & Context Engineering)</h4>
+            <h4>(LLMs & Context Engineering)</h4>
           </div>
         </div>
       </a>
@@ -177,7 +177,7 @@
           <img src="assets/img/blog4.webp" alt="AI Agents are Full Stack">
           <div class="blog-overlay">
             <h3>Why AI Agents Are a Full-Stack Problem</h3>
-             <h4>(Artificial Intelligence & System Thinking)</h4>
+             <h4>(System Thinking & AI Agents)</h4>
           </div>
         </div>
       </a>
@@ -189,7 +189,7 @@
           <img src="assets/img/blog5.webp" alt="Engineering Teams Build IDPs">
           <div class="blog-overlay">
             <h3>Every Engineering Team Builds an IDP</h3>
-            <h4>(Platform Engineering & Developer Efficiency)</h4>
+            <h4>(Platform Engg. & Dev Efficiency)</h4>
           </div>
         </div>
       </a>
@@ -213,7 +213,7 @@
           <img src="assets/img/blog7.webp" alt="Agile Was Never the Problem">
           <div class="blog-overlay">
             <h3>AI is revealing our Broken Agile Habits</h3>
-            <h4>(Agile Methodology & Future of Work)</h4>
+            <h4>(Agile & Future of Work)</h4>
           </div>
         </div>
       </a>
@@ -225,7 +225,7 @@
           <img src="assets/img/blog8.webp" alt="Death of Static Docs">
           <div class="blog-overlay">
             <h3>The Death of Static Dev Documentation</h3>
-            <h4>(Developer Experience & Techincal Writing)</h4>
+            <h4>(Dev Experience & Tech Writing)</h4>
           </div>
         </div>
       </a>
@@ -410,7 +410,7 @@
           <img src="assets/img/project6.png" alt="Music Recommendation System">
           <div class="project-overlay">
             <h3>ML Music Recommendation System</h3>
-            <h4>(Python & Tabeleau)</h4>
+            <h4>(Python & Tableau)</h4>
           </div>
         </div>
       </a>
