--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <br><br>
         Along the way, I’ve collaborated closely with DevOps, System Architects, and Platform/Data Engineering teams, contributing significantly to <a style="font-style: italic;">"How Engineers Build and Use Technical Products"</a>. In my free time, I love to tinker with Hands-on Experiments (<a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">on Github</a>), and contribute to the Open Source Projects.
         <br><br>
-        Somewhere between all of that, I also developed a soft spot for Technical Storytelling. Sharing my thoughts (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) through Blogs on the Latest Tech Advancements and Technical Writeups <a style="font-style: italic;">(e.g. how-to guides for developer onboarding or breaking down complex concepts in a way that lands)</a>. 
+        Somewhere between all of that, I also developed a soft spot for Technical Storytelling. Sharing my thoughts (<a href="https://medium.com/@bhurji.pk" target="_blank" style="color: var(--grey-label) !important;">on Medium</a>) through Blogs on the Latest Technological Advancements and Technical Writeups <a style="font-style: italic;">(e.g. how-to guides for developer onboarding or breaking down of complex technical concepts in a way that lands)</a>. 
         <br><br>
         MY PHILOSOPHY:
       </p>
@@ -124,7 +124,7 @@
       </h3>
       
        <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;"> 
-        Outside of work, I love to stay active and Fit. <a style="font-style: italic;">(Since school days, I have been an active athlete, won many medals, participated in marathons, and represented my state twice at national-level tournament)</a>.
+        Outside of work, I love to Stay Active and Fit. <a style="font-style: italic;">(Since school days, I have been an active athlete, won many medals, participated in marathons, and represented my state twice at national-level tournament)</a>.
       </p>
       
     </section>    
