--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog3.webp" alt="Why AI Systems Fail">
           <div class="blog-overlay">
-            <h3>Why Even Great AI Systems Fail Badly</h3>
+            <h3>Why Even Greatest AI Systems can Fail</h3>
             <h4>(LLMs & Context Engineering)</h4>
           </div>
         </div>
@@ -196,12 +196,12 @@
     </div>
 
     <div class="blogcard">
-      <a href="https://medium.com/design-bootcamp/mcp-and-the-quiet-rewiring-of-how-we-build-ai-powered-products-d734b9b97f1a">
+      <a href="https://medium.com/data-and-beyond/ai-agents-are-only-as-good-as-the-data-they-can-access-53cce607698a">
         <div class="blog-image-wrapper">
           <img src="assets/img/blog6.png" alt="MCP and AI Products">
           <div class="blog-overlay">
-            <h3>MCP and AI-Powered Products</h3>
-            <h4>(AI Engineering & MCP Servers)</h4>
+            <h3>AI Models are Only as Good as their Data</h3>
+            <h4>(Data Quality & MCP Servers)</h4>
           </div>
         </div>
       </a>
