--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
         <div class="blog-image-wrapper">
           <img src="assets/img/blog6.png" alt="MCP and AI Products">
           <div class="blog-overlay">
-            <h3>AI Models are Only as Good as their Data</h3>
-            <h4>(Data Quality & MCP Servers)</h4>
+            <h3>AI Models are as Good as their Access to Data</h3>
+            <h4>(AI Engineering & MCP Servers)</h4>
           </div>
         </div>
       </a>
