--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h1><span class="accent">Prineet Kaur</span></h1>
         <h2>
           I'm 
-          <span class="typed" data-typed-items=" a Technical Product Enthusiast, an AI & Data Evangelist, a Technical Wordsmith, an Experienced Leader"></span>
+          <span class="typed" data-typed-items=" a Technical Product Enthusiast, an AI and Data Evangelist, a Technical Wordsmith, a Strategic Content Leader"></span>
         </h2>
         <div class="hero-ctas">
           <a href="#blog" class="btn">My Tech Log</a>
