--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
     </div>
 
     <div class="blogcard">
-      <a href="https://medium.com/write-a-catalyst/from-automation-to-dehumanization-have-we-crossed-lines-with-the-ai-advancements-cd8beff1d174">
+      <a href="https://medium.com/write-a-catalyst/we-all-talk-about-responsible-ai-but-we-rarely-design-for-it-e3e522b0b040">
         <div class="blog-image-wrapper">
-          <img src="assets/img/blog9.webp" alt="Automation to Dehumanization">
+          <img src="assets/img/blog9.webp" alt="Sustainable & Responsible AI">
           <div class="blog-overlay">
-            <h3>From AI Automation to Dehumanization</h3>
+            <h3>"AI Governance" for Agentic Systems</h3>
             <h4>(Sustainable & Responsible AI)</h4>
           </div>
         </div>
